Heavily warn against Open to LAN (backport of #1504)

--- a/src/main/resources/META-INF/dreamcraft_at.cfg
+++ b/src/main/resources/META-INF/dreamcraft_at.cfg
@@ -1,2 +1,5 @@
 # Blocks
 public-f net.minecraft.block.Block field_149764_J
+
+# GUIs
+public net.minecraft.client.gui.GuiScreen func_146283_a(Ljava/util/List;II)V
