Fire questbook default load when Modpack updates (#1491)
(cherry picked from commit c4ca20890d3969b5a7e0cbd660a34133d92f34dd)

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -29,8 +29,9 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:ForestryMC:4.10.17:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:MatterManipulator:0.0.49-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:IguanaTweaksTConstruct:2.6.6:dev") { transitive = false }
-    compileOnlyApi("com.github.GTNewHorizons:Mobs-Info:0.5.4-GTNH:dev")
-    compileOnly("com.github.GTNewHorizons:Backhand:1.7.5:dev") { transitive = false }
+    compileOnlyApi("com.github.GTNewHorizons:Mobs-Info:0.5.7-GTNH:dev")
+    compileOnly("com.github.GTNewHorizons:Backhand:1.8.0:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:BetterQuesting:3.8.14-GTNH:dev") { transitive = false }
     //compileOnly("com.github.Roadhog360:Et-Futurum-Requiem:2.6.2:dev") { transitive = false }
 
     runtimeOnlyNonPublishable rfg.deobf("curse.maven:biomes-o-plenty-220318:2499612")
