--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,11 +1,11 @@
 // Add your dependencies here
 
 dependencies {
-    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.133:dev")
+    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.135-pre:dev")
     api("com.github.GTNewHorizons:Yamcl:0.7.1:dev")
     api("com.github.GTNewHorizons:Baubles-Expanded:2.2.2-GTNH:dev")
 
-    implementation("com.github.GTNewHorizons:GTNHLib:0.8.21:dev")
+    implementation("com.github.GTNewHorizons:GTNHLib:0.8.25:dev")
 
     implementation("net.glease:tc4recipelib:1.5.37:dev")
 
@@ -19,7 +19,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:WitcheryExtras:1.4.2:dev") { transitive = false }
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:witchery-69673:2234410")
-    compileOnly("com.github.GTNewHorizons:Chisel:2.17.6-GTNH:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:Chisel:2.17.7-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Botania:1.13.6-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:BloodMagic:1.8.5:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:extra-utilities-225561:2264384")
