Remove silver vat; add late mixin support

--- a/gradle.properties
+++ b/gradle.properties
@@ -90,7 +90,7 @@ mixinPlugin =
 # Specify the package that contains all of your Mixins. The package must exist or
 # the build will fail. If you have a package property defined in your mixins.<modid>.json,
 # it must match with this or the build will fail.
-mixinsPackage = mixin.mixins
+mixinsPackage = mixins
 
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # This parameter is for legacy compatibility only
