--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,9 +16,9 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:twilightforest:2.7.13:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Mantle:0.5.1:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.14.14-GTNH:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:WitcheryExtras:1.4.3:dev") { transitive = false }
+    devOnlyNonPublishable("com.github.GTNewHorizons:WitcheryExtras:1.4.3:dev") { transitive = false }
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") { transitive = false }
-    compileOnly rfg.deobf("curse.maven:witchery-69673:2234410")
+    devOnlyNonPublishable rfg.deobf("curse.maven:witchery-69673:2234410")
     compileOnly("com.github.GTNewHorizons:Chisel:2.17.7-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Botania:1.13.6-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:BloodMagic:1.8.7:dev") { transitive = false }
