--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,6 +39,10 @@ dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:WailaHarvestability:1.3.4-GTNH:dev")
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:Galacticraft:3.4.14-GTNH:dev")
 
+    //uncomment to test RC and Forestry recipes
+    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:Railcraft:9.17.6:dev")
+    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:ForestryMC:4.11.2:dev")
+
     // Core unit testing platform
     testImplementation(platform('org.junit:junit-bom:5.9.2'))
     testImplementation('org.junit.jupiter:junit-jupiter')
