Convert `BlockList` to not use Yamcl

--- a/src/main/resources/META-INF/dreamcraft_at.cfg
+++ b/src/main/resources/META-INF/dreamcraft_at.cfg
@@ -1,5 +1,6 @@
 # Blocks
 public-f net.minecraft.block.Block field_149764_J
+public net.minecraft.block.Block <init>(Lnet/minecraft/block/material/Material;)V
 
 # GUIs
 public net.minecraft.client.gui.GuiScreen func_146283_a(Ljava/util/List;II)V
