--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,8 +34,8 @@ dependencies {
     compileOnly("com.cubefury.vendingmachine:VendingMachine:0.4.2:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:BetterQuesting:3.8.14-GTNH:dev") { transitive = false }
     //compileOnly("com.github.Roadhog360:Et-Futurum-Requiem:2.6.2:dev") { transitive = false }
+    implementation rfg.deobf("curse.maven:biomes-o-plenty-220318:2499612")
 
-    runtimeOnlyNonPublishable rfg.deobf("curse.maven:biomes-o-plenty-220318:2499612")
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:WailaHarvestability:1.3.4-GTNH:dev")
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:Galacticraft:3.4.14-GTNH:dev")
 
