Fix Gradle deprecation warnings

--- a/repositories.gradle
+++ b/repositories.gradle
@@ -3,7 +3,7 @@
 repositories {
     mavenLocal()
     ivy {
-        url 'https://files.vexatos.com/'
+        url = uri('https://files.vexatos.com/')
         patternLayout {
             artifact "[module]/[artifact]-[revision](-[classifier])(.[ext])"
         }
@@ -18,7 +18,7 @@ repositories {
         forRepository {
             maven {
                 name = 'glease'
-                url = 'https://maven.glease.net/repos/releases/'
+                url = uri('https://maven.glease.net/repos/releases/')
             }
         }
         filter {
