--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 // Add your dependencies here
 
 dependencies {
-    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.283:dev")
+    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.284-pre:dev")
     api("com.github.GTNewHorizons:Yamcl:0.7.4:dev")
     api("com.github.GTNewHorizons:Baubles-Expanded:2.2.6-GTNH:dev")
 
@@ -35,7 +35,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:BetterQuesting:3.8.26-GTNH:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:biomes-o-plenty-220318:2499612")
     //compileOnly("com.github.Roadhog360:Et-Futurum-Requiem:2.6.2:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:Postea:1.2.0-pre:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:Postea:1.2.1-pre:dev") { transitive = false }
 
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:WailaHarvestability:1.3.4-GTNH:dev")
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:Galacticraft:3.4.17-GTNH:dev")
