--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,11 +1,11 @@
 // Add your dependencies here
 
 dependencies {
-    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.294:dev")
+    api("com.github.GTNewHorizons:GT5-Unofficial:5.09.52.307-pre:dev")
     api("com.github.GTNewHorizons:Yamcl:0.7.4:dev")
     api("com.github.GTNewHorizons:Baubles-Expanded:2.2.6-GTNH:dev")
 
-    implementation("com.github.GTNewHorizons:GTNHLib:0.9.20:dev")
+    implementation("com.github.GTNewHorizons:GTNHLib:0.9.26:dev")
 
     implementation("net.glease:tc4recipelib:1.5.37:dev")
 
@@ -15,34 +15,34 @@ dependencies {
     compileOnly("secondderivative.irontankminecarts:IronTankMinecarts:1.0.5:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:twilightforest:2.7.19:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Mantle:0.5.1:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.14.27-GTNH:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:TinkersConstruct:1.14.30-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:WitcheryExtras:1.4.7:dev") { transitive = false }
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:witchery-69673:2234410")
-    compileOnly("com.github.GTNewHorizons:Chisel:2.17.14-GTNH:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:Chisel:2.17.18-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Botania:1.13.14-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:BloodMagic:1.8.12:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:extra-utilities-225561:2264384")
     compileOnly("TGregworks:TGregworks:1.7.10-GTNH-1.0.26:deobf") { transitive = false }
     compileOnly("com.github.GTNewHorizons:amunra:0.8.7:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:Galacticraft:3.4.17-GTNH:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.11.4:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:ForestryMC:4.11.6:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:MatterManipulator:0.1.14-GTNH:dev") { transitive = false }
     compileOnly("com.github.GTNewHorizons:IguanaTweaksTConstruct:2.7.1:dev") { transitive = false }
     compileOnlyApi("com.github.GTNewHorizons:Mobs-Info:0.5.10-GTNH:dev")
-    compileOnly("com.github.GTNewHorizons:Backhand:1.8.2:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:Backhand:1.8.3:dev") { transitive = false }
     compileOnly("com.cubefury.vendingmachine:VendingMachine:0.4.2:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:BetterQuesting:3.8.28-GTNH:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:BetterQuesting:3.8.29-GTNH:dev") { transitive = false }
     compileOnly rfg.deobf("curse.maven:biomes-o-plenty-220318:2499612")
     //compileOnly("com.github.Roadhog360:Et-Futurum-Requiem:2.6.2:dev") { transitive = false }
-    compileOnly("com.github.GTNewHorizons:Postea:1.2.0-pre:dev") { transitive = false }
+    compileOnly("com.github.GTNewHorizons:Postea:1.2.1-pre:dev") { transitive = false }
 
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:WailaHarvestability:1.3.4-GTNH:dev")
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:Galacticraft:3.4.17-GTNH:dev")
 
     //uncomment to test RC and Forestry recipes
-    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:Railcraft:9.17.17:dev")
-    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:ForestryMC:4.11.4:dev")
+    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:Railcraft:9.17.20:dev")
+    //runtimeOnlyNonPublishable("com.github.GTNewHorizons:ForestryMC:4.11.6:dev")
 
     // RecEx, for testing purposes
     //runtimeOnlyNonPublishable("com.github.GTNewHorizons:RecEx:1.1.5:dev")
